--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=JetBrains+Mono:wght@300;700&display=swap" rel="stylesheet">
     
 <style>
-:root { --neon-blue:#38bdf8; --neon-pink:#f472b6; --neon-green:#22c55e; --neon-orange:#fb923c; --bg-dark:#020617; }
+:root { 
+    --neon-blue:#38bdf8; 
+    --neon-pink:#f472b6; 
+    --neon-green:#22c55e; 
+    --neon-orange:#fb923c; 
+    --gold: #ffcc00;
+    --royal: #7000ff;
+    --bg-dark:#020617; 
+}
 body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbitron',sans-serif; text-align:center; overflow-x:hidden; min-height: 100vh; }
 
 /* --- DISCO PARTY ENGINE --- */
@@ -23,7 +31,7 @@ body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbi
 .strobe { animation: strobeBG 0.1s infinite; }
 @keyframes strobeBG { 0% { background: #ff0000; } 20% { background: #00ff00; } 40% { background: #0000ff; } 60% { background: #ffff00; } 80% { background: #ff00ff; } 100% { background: #00ffff; } }
 
-/* --- INTRO SCREEN (ENHANCED) --- */
+/* --- INTRO SCREEN --- */
 #dixlabsIntro { position:fixed; inset:0; background:#000; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999999; transition:opacity 0.6s; }
 .intro-logo { width:350px; margin-bottom:40px; filter: drop-shadow(0 0 25px var(--neon-blue)); }
 .intro-btn { background:none; border:2px solid #fff; color:#fff; padding:20px 50px; cursor:pointer; font-family:'Orbitron'; font-weight:900; letter-spacing:5px; transition: 0.3s; }
@@ -41,7 +49,7 @@ header { padding: 120px 20px 60px; }
 
 /* --- PROJECT GRID --- */
 .projects { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1400px; margin: 0 auto; gap: 30px; padding: 60px 20px; }
-.card { background:rgba(15,23,42,0.8); border:1px solid rgba(56,189,248,0.1); padding:35px; border-radius:4px; width: 300px; text-align:left; transition:0.4s cubic-bezier(.175, .885, .32, 1.275); display:flex; flex-direction:column; border-top: 5px solid transparent; }
+.card { background:rgba(15,23,42,0.8); border:1px solid rgba(56,189,248,0.1); padding:35px; border-radius:4px; width: 300px; text-align:left; transition:0.4s cubic-bezier(.175, .885, .32, 1.275); display:flex; flex-direction:column; border-top: 5px solid transparent; position: relative; }
 .card:hover { transform:translateY(-15px); border-color:var(--neon-blue); box-shadow:0 20px 50px rgba(0,0,0,0.7); }
 .card-icon { font-size: 3.2rem; margin-bottom: 20px; display: inline-block; transition: 0.6s; }
 .card:hover .card-icon { transform: rotateY(360deg); }
@@ -52,6 +60,7 @@ header { padding: 120px 20px 60px; }
 .category-focus { border-top-color: var(--neon-pink); }
 .category-fact { border-top-color: var(--neon-green); }
 .category-danger { border-top-color: #ff0000; }
+.category-premium { border-top-color: var(--gold); }
 
 /* --- AKSA INTEGRATED TAB MODE --- */
 #aksa-tab-content { width: 100%; max-width: 800px; margin: 0 auto; display: none; flex-direction: column; background: #000; border: 2px solid var(--neon-orange); border-radius: 4px; box-shadow: 0 0 40px rgba(251, 146, 60, 0.2); }
@@ -108,6 +117,18 @@ header { padding: 120px 20px 60px; }
     </div>
 
     <div class="projects" id="projectsGrid">
+        
+        <div class="card category-game category-premium" style="border-top-color: var(--royal); background: linear-gradient(145deg, rgba(15,23,42,0.9) 0%, rgba(112,0,255,0.15) 100%); width: 630px;" onmouseenter="playHoverSound()">
+            <div style="position: absolute; top: 15px; right: 15px; background: var(--gold); color: black; font-size: 10px; padding: 5px 15px; font-weight: 900; border-radius: 50px;">NEW FLAGSHIP</div>
+            <div class="card-icon">💰</div>
+            <h3 style="color: var(--gold); font-size: 2rem;">MOUSE_BREAKER_EMPIRE</h3>
+            <p>The ultimate power simulation. Start with 10 cents, end as a Galactic Deity. Manage multi-trillion dollar crises, marry into ancient bloodlines, and reach 1Q (Quintillion) Legacy. This isn't just a game; it's a multiversal takeover.</p>
+            <div style="display: flex; gap: 10px;">
+                <button class="btn" style="flex: 1; color:var(--gold); border-color:var(--gold);" onclick="location.href='idle.html'">START_EMPIRE</button>
+                <button class="btn" style="flex: 1; color:var(--royal); border-color:var(--royal);" onclick="location.href='social.html'">SOCIAL_HUB</button>
+            </div>
+        </div>
+
         <div class="card category-focus" onmouseenter="playHoverSound()">
             <div class="card-icon">🎨</div>
             <h3>ZENBOARD</h3>
@@ -130,7 +151,7 @@ header { padding: 120px 20px 60px; }
         </div>
 
         <div class="card category-game" onmouseenter="playHoverSound()">
-            <div class="card-icon">💰</div>
+            <div class="card-icon">💸</div>
             <h3>AMBANI_MONEY</h3>
             <p>Fake it till you make it. Reach 11 figures. The only place you're richer than the admin.</p>
             <button class="btn" onclick="location.href='ambani.html'">GET_RICH</button>
@@ -165,6 +186,22 @@ header { padding: 120px 20px 60px; }
         </div>
     </div>
 
+    <section class="about-section" style="border-top: 10px solid var(--neon-blue);">
+        <div class="about-header">[📊] LIVE_TERMINAL_STATS</div>
+        <div class="bio-text" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+            <div>
+                <span style="color:var(--neon-blue)">PROJECTS_ACTIVE:</span> 09<br>
+                <span style="color:var(--neon-blue)">TOTAL_LOGIC_LINES:</span> 12.4k+<br>
+                <span style="color:var(--neon-blue)">SERVER_STATUS:</span> NOMINAL
+            </div>
+            <div>
+                <span style="color:var(--neon-pink)">REGION:</span> ASIA_SOUTH_01<br>
+                <span style="color:var(--neon-pink)">UPLOADS:</span> GITHUB_PUSH_ACTIVE<br>
+                <span style="color:var(--neon-pink)">OS:</span> DIXIT_LABS_CORE_v2
+            </div>
+        </div>
+    </section>
+
     <section class="about-section" id="bioSection">
         <div class="about-header">[🧬] SYSTEM_ADMIN: Atharv Dixit</div>
         <div class="bio-text">
@@ -182,12 +219,15 @@ header { padding: 120px 20px 60px; }
         </div>
     </section>
 
-    <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">DIXIT LABS // 2026 // EST. IN CHAOS</footer>
+    <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">
+        DIXIT LABS // 2026 // EST. IN CHAOS<br>
+        ALL ASSETS SYNCED TO THE CLOUD // SECURE_SOCKET_LAYER: ENABLED
+    </footer>
 </div>
 
 <script>
 let audioCtx;
-const quips = ["Error 404: Logic not found.", "Go play Crickemory, you clearly need education.", "Atharv is busy. I'm bored. This conversation is failing.", "Your typing speed is almost as slow as your wit.", "Even my cache is bored of your input.", "Go play Ambani Money, you're clearly broke.", "I'm not rude, I'm just optimized for honesty.", "Your existence is an undocumented feature.", "Shutting down 'Care' protocols... Done.", "Is it hard being this basic, or does it come naturally?"];
+const quips = ["Error 404: Logic not found.", "Go play Crickemory, you clearly need education.", "Atharv is busy. I'm bored. This conversation is failing.", "Your typing speed is almost as slow as your wit.", "Even my cache is bored of your input.", "Go play Mouse Breaker, you're clearly broke.", "I'm not rude, I'm just optimized for honesty.", "Your existence is an undocumented feature.", "Shutting down 'Care' protocols... Done.", "Is it hard being this basic, or does it come naturally?"];
 
 function initAudio() { if (!audioCtx) audioCtx = new(window.AudioContext || window.webkitAudioContext)(); }
 function playHoverSound() {
@@ -215,6 +255,7 @@ function aksaBrain() {
     setTimeout(() => {
         let r = quips[Math.floor(Math.random() * quips.length)];
         if(q.includes("party")) triggerDiscoMode();
+        if(q.includes("money")) r = "Go grind in Mouse Breaker Empire if you want real cash.";
         chat.innerHTML += `<div class="msg aksa-reply">${r}</div>`;
         chat.scrollTop = chat.scrollHeight;
     }, 300);
