--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@ header { padding: 120px 20px 60px; }
 .category-danger { border-top-color: #ff0000; }
 .category-premium { border-top-color: var(--gold); }
 
+/* --- SOCIAL LINKS SECTION --- */
+.social-footer-strip { margin: 80px 0; display: flex; flex-direction: column; align-items: center; gap: 30px; }
+.social-icons-wrap { display: flex; gap: 50px; }
+.social-icon-link { transition: 0.4s; position: relative; display: flex; align-items: center; justify-content: center; }
+.social-icon-link svg { width: 50px; height: 50px; fill: #64748b; transition: 0.4s; }
+.social-icon-link:hover svg { fill: #white; filter: drop-shadow(0 0 15px var(--neon-blue)); transform: scale(1.2); }
+.social-icon-link.yt:hover svg { fill: #ff0000; filter: drop-shadow(0 0 15px #ff0000); }
+.social-icon-link.x:hover svg { fill: white; filter: drop-shadow(0 0 15px white); }
+
 /* --- AKSA INTEGRATED TAB MODE --- */
 #aksa-tab-content { width: 100%; max-width: 800px; margin: 0 auto; display: none; flex-direction: column; background: #000; border: 2px solid var(--neon-orange); border-radius: 4px; box-shadow: 0 0 40px rgba(251, 146, 60, 0.2); }
 #aksa-chat { height: 450px; overflow-y: auto; padding: 25px; font-family: 'JetBrains Mono'; font-size: 14px; display: flex; flex-direction: column; gap: 15px; text-align: left; }
@@ -121,12 +130,9 @@ header { padding: 120px 20px 60px; }
         <div class="card category-game category-premium" style="border-top-color: var(--royal); background: linear-gradient(145deg, rgba(15,23,42,0.9) 0%, rgba(112,0,255,0.15) 100%); width: 630px;" onmouseenter="playHoverSound()">
             <div style="position: absolute; top: 15px; right: 15px; background: var(--gold); color: black; font-size: 10px; padding: 5px 15px; font-weight: 900; border-radius: 50px;">NEW FLAGSHIP</div>
             <div class="card-icon">💰</div>
-            <h3 style="color: var(--gold); font-size: 2rem;">MOUSE_BREAKER_EMPIRE</h3>
-            <p>The ultimate power simulation. Start with 10 cents, end as a Galactic Deity. Manage multi-trillion dollar crises, marry into ancient bloodlines, and reach 1Q (Quintillion) Legacy. This isn't just a game; it's a multiversal takeover.</p>
-            <div style="display: flex; gap: 10px;">
-                <button class="btn" style="flex: 1; color:var(--gold); border-color:var(--gold);" onclick="location.href='idle.html'">START_EMPIRE</button>
-                <button class="btn" style="flex: 1; color:var(--royal); border-color:var(--royal);" onclick="location.href='social.html'">SOCIAL_HUB</button>
-            </div>
+            <h3 style="color: var(--gold); font-size: 2.2rem; letter-spacing: 2px;">MOUSE_BREAKER_EMPIRE</h3>
+            <p>The ultimate multiversal power trip. Start with nothing, dominate markets, and reach the 1Q Legacy score. Divine Ascension awaits those who can survive the boardroom. NOTE: Access restricted to active CEOs only.</p>
+            <button class="btn" style="width: 100%; height: 60px; font-size: 1.2rem; color:var(--gold); border-color:var(--gold); background: rgba(255,204,0,0.05);" onclick="location.href='idle.html'">INITIALIZE_EMPIRE_v4.0</button>
         </div>
 
         <div class="card category-focus" onmouseenter="playHoverSound()">
@@ -177,13 +183,6 @@ header { padding: 120px 20px 60px; }
             <p>CRITICAL: High intensity disco protocols detected. Click to initiate party.exe.</p>
             <button class="btn" style="color:#ff0000; border-color:#ff0000;" onclick="triggerDiscoMode()">PARTY_EXE</button>
         </div>
-
-        <div class="card category-fact" onmouseenter="playHoverSound()">
-            <div class="card-icon">🍳</div>
-            <h3>COOKING...</h3>
-            <p>Something massive is bubbling in the backend. More logic, zero mercy. Stay tuned.</p>
-            <button class="btn" style="opacity:0.4; cursor:default;">COMING_SOON</button>
-        </div>
     </div>
 
     <section class="about-section" style="border-top: 10px solid var(--neon-blue);">
@@ -191,16 +190,28 @@ header { padding: 120px 20px 60px; }
         <div class="bio-text" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
             <div>
                 <span style="color:var(--neon-blue)">PROJECTS_ACTIVE:</span> 09<br>
-                <span style="color:var(--neon-blue)">TOTAL_LOGIC_LINES:</span> 12.4k+<br>
+                <span style="color:var(--neon-blue)">TOTAL_LOGIC_LINES:</span> 15.2k+<br>
                 <span style="color:var(--neon-blue)">SERVER_STATUS:</span> NOMINAL
             </div>
             <div>
                 <span style="color:var(--neon-pink)">REGION:</span> ASIA_SOUTH_01<br>
-                <span style="color:var(--neon-pink)">UPLOADS:</span> GITHUB_PUSH_ACTIVE<br>
-                <span style="color:var(--neon-pink)">OS:</span> DIXIT_LABS_CORE_v2
+                <span style="color:var(--neon-pink)">UPLOADS:</span> GITHUB_PAGES_LIVE<br>
+                <span style="color:var(--neon-pink)">OS:</span> DIXIT_LABS_v3.5
             </div>
         </div>
     </section>
+
+    <div class="social-footer-strip">
+        <h2 style="font-family:'Orbitron'; letter-spacing:10px; opacity:0.6;">CONNECT_LABS</h2>
+        <div class="social-icons-wrap">
+            <a href="https://x.com/dixlabsOFF/status/2026905204072001768?s=20" target="_blank" class="social-icon-link x">
+                <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+            </a>
+            <a href="https://www.youtube.com/channel/UC2atq1Dz93Ge30UgNYLMECQ" target="_blank" class="social-icon-link yt">
+                <svg viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+            </a>
+        </div>
+    </div>
 
     <section class="about-section" id="bioSection">
         <div class="about-header">[🧬] SYSTEM_ADMIN: Atharv Dixit</div>
@@ -255,7 +266,7 @@ function aksaBrain() {
     setTimeout(() => {
         let r = quips[Math.floor(Math.random() * quips.length)];
         if(q.includes("party")) triggerDiscoMode();
-        if(q.includes("money")) r = "Go grind in Mouse Breaker Empire if you want real cash.";
+        if(q.includes("money") || q.includes("mouse")) r = "Start with idle.html. Only then can you talk money.";
         chat.innerHTML += `<div class="msg aksa-reply">${r}</div>`;
         chat.scrollTop = chat.scrollHeight;
     }, 300);
@@ -304,4 +315,4 @@ function filterSelection(cat, el) {
 }
 </script>
 </body>
-</html>
+</html>s
