--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
     --neon-pink:#f472b6; 
     --neon-green:#22c55e; 
     --neon-orange:#fb923c; 
-    --gold: #ffcc00;
-    --royal: #7000ff;
     --bg-dark:#020617; 
 }
-body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbitron',sans-serif; text-align:center; overflow-x:hidden; min-height: 100vh; }
+body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbitron',sans-serif; text-align:center; overflow-x:hidden; min-height: 100vh; transition: background 0.5s; }
 
 /* --- DISCO PARTY ENGINE --- */
 #partyOverlay { position: fixed; inset: 0; display: none; background: rgba(0,0,0,0.98); z-index: 1000000; flex-direction: column; justify-content: center; align-items: center; pointer-events: none; }
@@ -43,9 +41,9 @@ body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbi
 #loaderStatus { font-family: 'JetBrains Mono'; font-size: 12px; color: var(--neon-blue); margin-top: 15px; letter-spacing: 2px; height: 20px; }
 
 /* --- HEADER --- */
-header { padding: 120px 20px 60px; }
-.logo-text { font-size: 9rem; font-weight: 900; letter-spacing: 30px; color: var(--neon-blue); text-shadow: 0 0 40px rgba(56,189,248,0.7); margin: 0; }
-#subHeader { font-family: 'JetBrains Mono'; color: var(--neon-pink); font-size: 18px; margin-top: 25px; font-weight: bold; letter-spacing: 4px; }
+header { padding: 120px 20px 60px; min-height: 250px; }
+.logo-text { font-size: 8rem; font-weight: 900; letter-spacing: 25px; color: var(--neon-blue); text-shadow: 0 0 40px rgba(56,189,248,0.7); margin: 0; transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+#subHeader { font-family: 'JetBrains Mono'; color: var(--neon-pink); font-size: 18px; margin-top: 25px; font-weight: bold; letter-spacing: 4px; height: 30px; }
 
 /* --- NAV BAR --- */
 .nav-tabs { position:sticky; top:0; background:rgba(2,6,23,0.98); backdrop-filter:blur(15px); display:flex; justify-content:center; gap:30px; padding:25px; border-bottom:1px solid rgba(56,189,248,0.2); z-index:999; }
@@ -53,39 +51,48 @@ header { padding: 120px 20px 60px; }
 .tab-link.active { color: #fff; text-shadow: 0 0 10px #fff; border-bottom: 2px solid var(--neon-blue); }
 
 /* --- PROJECT GRID --- */
-.projects { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1400px; margin: 0 auto; gap: 30px; padding: 60px 20px; }
-.card { background:rgba(15,23,42,0.8); border:1px solid rgba(56,189,248,0.1); padding:35px; border-radius:4px; width: 300px; text-align:left; transition:0.4s cubic-bezier(.175, .885, .32, 1.275); display:flex; flex-direction:column; border-top: 5px solid transparent; position: relative; }
-.card:hover { transform:translateY(-15px); border-color:var(--neon-blue); box-shadow:0 20px 50px rgba(0,0,0,0.7); }
-.card-icon { font-size: 3.2rem; margin-bottom: 20px; display: inline-block; transition: 0.6s; }
-.btn { margin-top:auto; padding:12px; border:2px solid var(--neon-blue); background:transparent; color:var(--neon-blue); cursor:pointer; font-family:'Orbitron'; font-size:10px; font-weight:900; transition:0.3s; }
-.btn:hover { background:var(--neon-blue); color:#000; }
+.projects { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1400px; margin: 0 auto; gap: 30px; padding: 100px 20px; }
+.card { background:rgba(15,23,42,0.8); border:1px solid rgba(56,189,248,0.1); padding:40px; border-radius:4px; width: 320px; text-align:left; transition:0.4s; display:flex; flex-direction:column; border-top: 5px solid transparent; position: relative; }
+.card:hover { transform:translateY(-15px); border-color:inherit; box-shadow:0 20px 50px rgba(0,0,0,0.7); }
+.card-icon { font-size: 3.5rem; margin-bottom: 25px; display: inline-block; transition: 0.6s; }
+.btn { margin-top:auto; padding:15px; border:2px solid; background:transparent; cursor:pointer; font-family:'Orbitron'; font-size:11px; font-weight:900; transition:0.3s; }
 
 .category-game { border-top-color: var(--neon-blue); }
+.category-game .btn { color: var(--neon-blue); border-color: var(--neon-blue); }
+.category-game .btn:hover { background: var(--neon-blue); color: #000; }
+
 .category-focus { border-top-color: var(--neon-pink); }
+.category-focus .btn { color: var(--neon-pink); border-color: var(--neon-pink); }
+.category-focus .btn:hover { background: var(--neon-pink); color: #000; }
+
 .category-fact { border-top-color: var(--neon-green); }
+.category-fact .btn { color: var(--neon-green); border-color: var(--neon-green); }
+.category-fact .btn:hover { background: var(--neon-green); color: #000; }
+
 .category-danger { border-top-color: #ff0000; }
+.category-danger .btn { color: #ff0000; border-color: #ff0000; }
 
 /* --- SOCIAL LINKS --- */
-.social-footer-strip { margin: 80px 0; display: flex; flex-direction: column; align-items: center; gap: 30px; }
-.social-icons-wrap { display: flex; gap: 50px; }
-.social-icon-link svg { width: 50px; height: 50px; fill: #64748b; transition: 0.4s; }
-.social-icon-link:hover svg { fill: white; filter: drop-shadow(0 0 15px var(--neon-blue)); transform: scale(1.2); }
+.social-footer-strip { margin: 150px 0; display: flex; flex-direction: column; align-items: center; gap: 40px; }
+.social-icons-wrap { display: flex; gap: 60px; }
+.social-icon-link svg { width: 60px; height: 60px; fill: #64748b; transition: 0.4s; }
+.social-icon-link:hover svg { fill: white; filter: drop-shadow(0 0 15px var(--neon-blue)); transform: translateY(-10px); }
 .social-icon-link.yt:hover svg { fill: #ff0000; filter: drop-shadow(0 0 15px #ff0000); }
 
 /* --- AKSA CHAT --- */
-#aksa-tab-content { width: 100%; max-width: 800px; margin: 0 auto; display: none; flex-direction: column; background: #000; border: 2px solid var(--neon-orange); border-radius: 4px; }
-#aksa-chat { height: 450px; overflow-y: auto; padding: 25px; font-family: 'JetBrains Mono'; font-size: 14px; display: flex; flex-direction: column; gap: 15px; text-align: left; }
-.aksa-reply { background: rgba(251,146,60,0.1); color: var(--neon-orange); border-left: 4px solid var(--neon-orange); padding: 12px; }
-.user-msg { background: rgba(56,189,248,0.1); color: var(--neon-blue); align-self: flex-end; border-right: 4px solid var(--neon-blue); padding: 12px; }
-#aksa-input-wrap { display: flex; border-top: 1px solid #222; }
-#aksa-input-field { flex: 1; background: transparent; border: none; color: #fff; padding: 20px; outline: none; font-family: 'JetBrains Mono'; }
-#aksa-send { background: var(--neon-orange); border: none; padding: 0 35px; cursor: pointer; font-weight: 900; color: #000; }
+#aksa-tab-content { width: 100%; max-width: 900px; margin: 50px auto; display: none; flex-direction: column; background: #000; border: 2px solid var(--neon-orange); border-radius: 8px; overflow: hidden; }
+#aksa-chat { height: 500px; overflow-y: auto; padding: 30px; font-family: 'JetBrains Mono'; font-size: 15px; display: flex; flex-direction: column; gap: 20px; text-align: left; }
+.aksa-reply { background: rgba(251,146,60,0.1); color: var(--neon-orange); border-left: 5px solid var(--neon-orange); padding: 15px; border-radius: 0 10px 10px 0; }
+.user-msg { background: rgba(56,189,248,0.1); color: var(--neon-blue); align-self: flex-end; border-right: 5px solid var(--neon-blue); padding: 15px; border-radius: 10px 0 0 10px; }
+#aksa-input-wrap { display: flex; border-top: 1px solid #222; background: #0a0a0a; }
+#aksa-input-field { flex: 1; background: transparent; border: none; color: #fff; padding: 25px; outline: none; font-family: 'JetBrains Mono'; font-size: 16px; }
+#aksa-send { background: var(--neon-orange); border: none; padding: 0 45px; cursor: pointer; font-weight: 900; color: #000; font-family: 'Orbitron'; }
 
-.about-section { max-width: 900px; margin: 100px auto; padding: 60px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); text-align: left; border-radius: 12px; }
-.about-header { color: var(--neon-green); font-size: 24px; font-weight: 900; margin-bottom: 30px; letter-spacing: 3px; }
-.bio-text { font-family: 'JetBrains Mono'; color: #cbd5e1; font-size: 16px; line-height: 2; }
+.about-section { max-width: 1000px; margin: 150px auto; padding: 80px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); text-align: left; border-radius: 15px; }
+.about-header { color: var(--neon-green); font-size: 28px; font-weight: 900; margin-bottom: 40px; letter-spacing: 5px; }
+.bio-text { font-family: 'JetBrains Mono'; color: #cbd5e1; font-size: 17px; line-height: 2.2; }
 .hidden { display: none !important; }
-@media (max-width: 768px) { .logo-text { font-size: 3rem; letter-spacing: 10px; } }
+@media (max-width: 1024px) { .logo-text { font-size: 4rem; letter-spacing: 15px; } }
 </style>
 </head>
 
@@ -115,12 +122,12 @@ header { padding: 120px 20px 60px; }
     </nav>
 
     <header>
-        <h1 class="logo-text">DIXLABS</h1>
+        <h1 class="logo-text" id="mainHeader">DIXLABS</h1>
         <p id="subHeader"></p>
     </header>
 
     <div id="aksa-tab-content">
-        <div id="aksa-chat"><div class="msg aksa-reply">Data synced. AKSA online. What do you want?</div></div>
+        <div id="aksa-chat"><div class="msg aksa-reply">Data synced. AKSA online. I've been told to be "nice," but I prefer "honest." Ask me anything about the sites or the developer.</div></div>
         <div id="aksa-input-wrap">
             <input type="text" id="aksa-input-field" placeholder="Challenge the AI..." onkeypress="if(event.key==='Enter') aksaBrain()">
             <button id="aksa-send" onclick="aksaBrain()">EXE</button>
@@ -132,16 +139,58 @@ header { padding: 120px 20px 60px; }
             <div style="position: absolute; top: 15px; right: 15px; background: var(--neon-blue); color: black; font-size: 8px; padding: 4px 10px; font-weight: 900; border-radius: 50px;">FLAGSHIP</div>
             <div class="card-icon">💰</div>
             <h3>MOUSE_BREAKER_EMPIRE</h3>
-            <p>Multiversal power trip. Start with nothing, dominate markets, and reach the 1Q Legacy score.</p>
+            <p>The ultimate multiversal power trip. Start with nothing, dominate markets, buy planets, and reach the 1Q Legacy score. Divine Ascension awaits those who click enough.</p>
             <button class="btn" onclick="location.href='idle.html'">INITIALIZE_EMPIRE</button>
         </div>
-        <div class="card category-focus"><div class="card-icon">🎨</div><h3>ZENBOARD</h3><p>Infinite digital canvas for brain dumps.</p><button class="btn" style="color:var(--neon-pink); border-color:var(--neon-pink);" onclick="location.href='zb.html'">START_SKETCH</button></div>
-        <div class="card category-fact"><div class="card-icon">🏏</div><h3>CRICKEMORY</h3><p>Atharv's archive. 50 facts. 1550-2024.</p><button class="btn" onclick="location.href='c.html'">ENTER_STADIUM</button></div>
-        <div class="card category-fact"><div class="card-icon">⚽</div><h3>FOOTEMORY</h3><p>Football milestones for the elite.</p><button class="btn" style="color:var(--neon-green); border-color:var(--neon-green);" onclick="location.href='f.html'">KICK_OFF</button></div>
-        <div class="card category-game"><div class="card-icon">💸</div><h3>AMBANI_MONEY</h3><p>Wealth simulator. Reach 11 figures.</p><button class="btn" onclick="location.href='ambani.html'">GET_RICH</button></div>
-        <div class="card category-game"><div class="card-icon">🗑️</div><h3>GROSSDUMPSTER</h3><p>High-speed scrap survival.</p><button class="btn" onclick="location.href='gd.html'">SCRAP_METAL</button></div>
-        <div class="card category-focus"><div class="card-icon">🧘</div><h3>DEEPWORK.PRO</h3><p>Zero distractions. 3-hour focus loops.</p><button class="btn" style="color:var(--neon-pink); border-color:var(--neon-pink);" onclick="location.href='deepwork.html'">LOCK_IN</button></div>
-        <div class="card category-danger"><div class="card-icon">⚠️</div><h3>DANGER_ZONE</h3><p>Critical disco protocols detected.</p><button class="btn" style="color:#ff0000; border-color:#ff0000;" onclick="triggerDiscoMode()">PARTY_EXE</button></div>
+
+        <div class="card category-focus">
+            <div class="card-icon">🎨</div>
+            <h3>ZENBOARD</h3>
+            <p>Infinite digital canvas. Sketch, import photos, and dump your brain. Built because thoughts are too big for one page and messy ideas deserve an infinite space.</p>
+            <button class="btn" onclick="location.href='zb.html'">START_SKETCH</button>
+        </div>
+
+        <div class="card category-fact">
+            <div class="card-icon">🏏</div>
+            <h3>CRICKEMORY</h3>
+            <p>Atharv's master archive. Covering 1550 to 2024. 50 facts that define the history of the game. Pure data for those who think they know cricket.</p>
+            <button class="btn" onclick="location.href='c.html'">ENTER_STADIUM</button>
+        </div>
+
+        <div class="card category-fact">
+            <div class="card-icon">⚽</div>
+            <h3>FOOTEMORY</h3>
+            <p>Football milestones for the elite. Pele to Messi. Knowledge is the only goal here. A curated list of moments that changed the beautiful game forever.</p>
+            <button class="btn" onclick="location.href='f.html'">KICK_OFF</button>
+        </div>
+
+        <div class="card category-game">
+            <div class="card-icon">💸</div>
+            <h3>AMBANI_MONEY</h3>
+            <p>Fake it till you make it. Reach 11 figures in this satire wealth simulator. The only place on the internet where you're richer than the admin.</p>
+            <button class="btn" onclick="location.href='ambani.html'">GET_RICH</button>
+        </div>
+
+        <div class="card category-game">
+            <div class="card-icon">🗑️</div>
+            <h3>GROSSDUMPSTER</h3>
+            <p>Catch the scrap, avoid the toxic sludge. High-speed pixel survival game. It’s messy, it’s fast, and it’s a total metaphor for modern social media.</p>
+            <button class="btn" onclick="location.href='gd.html'">SCRAP_METAL</button>
+        </div>
+
+        <div class="card category-focus">
+            <div class="card-icon">🧘</div>
+            <h3>DEEPWORK.PRO</h3>
+            <p>Zero distractions. 3-hour focus loops. Built for heavy production sessions. No notifications, no fluff—just you and the work you're supposed to be doing.</p>
+            <button class="btn" onclick="location.href='deepwork.html'">LOCK_IN</button>
+        </div>
+
+        <div class="card category-danger">
+            <div class="card-icon">⚠️</div>
+            <h3>DANGER_ZONE</h3>
+            <p>CRITICAL: High intensity disco protocols detected. Click to initiate party.exe. Warning: May cause excessive pixel movement and visual joy.</p>
+            <button class="btn" onclick="triggerDiscoMode()">PARTY_EXE</button>
+        </div>
     </div>
 
     <section class="about-section" id="bioSection">
@@ -209,22 +258,20 @@ document.getElementById("bootBtn").onclick = function() {
     const messages = ["CONNECTING_CORE...", "LOADING_FACTS...", "CREATING_BUGS...", "OPTIMIZING_CHAOS...", "BOOT_COMPLETE"];
     let p = 0;
     const interval = setInterval(() => {
-        p += 2;
-        fill.style.width = p + "%";
+        p += 2; fill.style.width = p + "%";
         status.innerText = messages[Math.floor(p/25)] || "DONE";
-        if(p >= 100) {
-            clearInterval(interval);
-            document.getElementById("dixlabsIntro").style.opacity = "0";
-            setTimeout(() => { document.getElementById("dixlabsIntro").style.display = "none"; typeWriter(); }, 500);
-        }
+        if(p >= 100) { clearInterval(interval); document.getElementById("dixlabsIntro").style.opacity = "0"; setTimeout(() => { document.getElementById("dixlabsIntro").style.display = "none"; typeWriter("DIXLABS", "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS", "var(--neon-blue)"); }, 500); }
     }, 40);
 };
 
-function typeWriter() {
+function typeWriter(title, sub, color) {
+    const main = document.getElementById("mainHeader");
     const el = document.getElementById("subHeader");
-    const txt = "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS";
+    main.innerText = title;
+    main.style.color = color;
+    main.style.textShadow = `0 0 40px ${color}`;
     let i = 0; el.innerHTML = "";
-    function type() { if(i < txt.length) { el.innerHTML += txt.charAt(i); i++; setTimeout(type, 50); } }
+    function type() { if(i < sub.length) { el.innerHTML += sub.charAt(i); i++; setTimeout(type, 30); } }
     type();
 }
 
@@ -238,6 +285,14 @@ function filterSelection(cat, el) {
     const cards = document.querySelectorAll(".card");
     const tabs = document.querySelectorAll(".tab-link");
     tabs.forEach(t => t.classList.remove("active")); el.classList.add("active");
+    
+    // Dynamic Header Logic
+    if(cat === 'all') typeWriter("DIXLABS", "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS", "var(--neon-blue)");
+    if(cat === 'game') typeWriter("GAMES", "> SIMULATORS // EMPIRES // PIXEL_CHAOS", "var(--neon-blue)");
+    if(cat === 'focus') typeWriter("FOCUS", "> ZEN_CANVAS // DEEP_WORK // NO_NOISE", "var(--neon-pink)");
+    if(cat === 'fact') typeWriter("FACTS", "> CRICKET_DATA // FOOTBALL_HISTORY // ELITE", "var(--neon-green)");
+    if(cat === 'aksa') typeWriter("AKSA", "> SYSTEM_INTELLIGENCE // TRUTH_ENGINE", "var(--neon-orange)");
+
     if(cat==='aksa'){
         document.getElementById('projectsGrid').classList.add('hidden');
         document.getElementById('bioSection').classList.add('hidden');
